Update tf-idf model

--- a/tf_idf.ipynb
+++ b/tf_idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 187,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 188,
    "outputs": [],
    "source": [
     "def merge_list(contents):\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 189,
    "outputs": [],
    "source": [
     "def sort_coo(coo_matrix):\n",
@@ -54,27 +54,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 190,
    "outputs": [],
    "source": [
-    "def extract_topn_from_vector(feature_names, sorted_items, topn=10):\n",
-    "    \"\"\"get the feature names and tf-idf score of top n items\"\"\"\n",
+    "def extract_topn_from_vector(feature_name_list, sorted_item_list, topn=10):\n",
+    "    \"\"\"\n",
+    "    get the feature names and tf-idf score of top n items\n",
+    "    \"\"\"\n",
     "\n",
-    "    #use only topn items from vector\n",
-    "    sorted_items = sorted_items[:topn]\n",
+    "    # use only topn items from vector\n",
+    "    sorted_item_list = sorted_item_list[:topn]\n",
     "\n",
     "    score_vals = []\n",
     "    feature_vals = []\n",
     "\n",
     "    # word index and corresponding tf-idf score\n",
-    "    for idx, score in sorted_items:\n",
+    "    for idx, score in sorted_item_list:\n",
     "\n",
     "        #keep track of feature name and its corresponding score\n",
     "        score_vals.append(round(score, 3))\n",
-    "        feature_vals.append(feature_names[idx])\n",
+    "        feature_vals.append(feature_name_list[idx])\n",
     "\n",
-    "    #create a tuples of feature,score\n",
-    "    #results = zip(feature_vals,score_vals)\n",
+    "    # create a tuples of feature,score\n",
+    "    # results = zip(feature_vals,score_vals)\n",
     "    results= {}\n",
     "    for idx in range(len(feature_vals)):\n",
     "        results[feature_vals[idx]]=score_vals[idx]\n",
@@ -90,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 191,
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# get the weibo contents\n",
-    "weibo_contents = read_csv_column('./dataset/processed_trump.csv', '微博正文')\n",
+    "weibo_contents = read_csv_column('./trump/processed_trump.csv', '微博正文')\n",
     "\n",
     "# ignore words that appear in 85% of documents\n",
     "cv=CountVectorizer(max_df=0.85, max_features=10000)\n",
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 192,
    "outputs": [
     {
      "name": "stdout",
@@ -124,7 +126,7 @@
      "data": {
       "text/plain": "['但特朗普', '不知', '知道', '说话', '创业', '平均', '股价', '2018年', '国庆', '本来']"
      },
-     "execution_count": 166,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 193,
    "outputs": [
     {
      "data": {
       "text/plain": "TfidfTransformer()"
      },
-     "execution_count": 167,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 194,
    "outputs": [],
    "source": [
     "feature_names=cv.get_feature_names()\n",
     "\n",
     "# get the document that we want to extract keywords from\n",
-    "trump1_content = read_csv_column('./dataset/trump_10.csv', '微博正文')"
+    "trump1_content = read_csv_column('./trump/trump_10.csv', '微博正文')"
    ],
    "metadata": {
     "collapsed": false,
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 195,
    "outputs": [
     {
      "name": "stdout",
