--- a/tf_idf.ipynb
+++ b/tf_idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def sort_coo(coo_matrix):\n",
@@ -36,10 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "outputs": [],
    "source": [
-    "def extract_topn_from_vector(feature_name_list, sorted_item_list, topn=10):\n",
+    "def extract_topn_from_vector(feature_name_list, sorted_item_list, topn):\n",
     "    \"\"\"\n",
     "    get the feature names and tf-idf score of top n items\n",
     "    \"\"\"\n",
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# get the weibo contents\n",
-    "weibo_contents = read_csv_column('./trump/processed_trump.csv', '微博正文')\n",
+    "weibo_contents = read_csv_column('./trump/preprocessed_v2.csv', '微博正文')\n",
     "\n",
     "# ignore words that appear in 85% of documents\n",
     "cv=CountVectorizer(max_df=0.85, max_features=10000)\n",
@@ -95,44 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "['但特朗普', '不知', '知道', '说话', '创业', '平均', '股价', '2018年', '国庆', '本来']"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(type(weibo_contents[0]))\n",
-    "list(cv.vocabulary_.keys())[:10]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% look at 10 words from the vocabulary\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "TfidfTransformer()"
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "feature_names=cv.get_feature_names()\n",
     "\n",
     "# get the document that we want to extract keywords from\n",
-    "trump1_content = read_csv_column('./trump/trump_10.csv', '微博正文')"
+    "trump1_content = read_csv_column('./trump/trump_9.csv', '微博正文')"
    ],
    "metadata": {
     "collapsed": false,
@@ -169,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -177,26 +146,26 @@
      "text": [
       "\n",
       "Keywords\n",
-      "新冠 0.329\n",
-      "美国 0.272\n",
-      "哈哈哈 0.255\n",
-      "确诊 0.231\n",
-      "总统 0.197\n",
-      "夫妇 0.188\n",
-      "检测 0.146\n",
-      "视频 0.144\n",
-      "病毒 0.137\n",
-      "阳性 0.127\n",
-      "感染 0.127\n",
-      "白宫 0.126\n",
-      "朗普 0.125\n",
-      "拜登 0.122\n",
-      "接受 0.116\n",
-      "辩论 0.115\n",
-      "大选 0.114\n",
-      "症状 0.111\n",
-      "竞选 0.11\n",
-      "治疗 0.108\n"
+      "美国 0.464\n",
+      "中国 0.257\n",
+      "政府 0.179\n",
+      "总统 0.169\n",
+      "9月 0.157\n",
+      "拜登 0.147\n",
+      "tiktok 0.125\n",
+      "疫苗 0.106\n",
+      "大选 0.104\n",
+      "新冠 0.102\n",
+      "报道 0.101\n",
+      "疫情 0.101\n",
+      "关税 0.095\n",
+      "视频 0.094\n",
+      "美元 0.093\n",
+      "新闻 0.089\n",
+      "死亡 0.082\n",
+      "时间 0.08\n",
+      "记者 0.08\n",
+      "国家 0.078\n"
      ]
     }
    ],
@@ -212,7 +181,7 @@
     "sorted_items = sort_coo(tf_idf_vector.tocoo())\n",
     "\n",
     "# extract only the top n; n here is 10\n",
-    "keywords=extract_topn_from_vector(feature_names,sorted_items, 20)\n",
+    "keywords = extract_topn_from_vector(feature_names, sorted_items, 20)\n",
     "\n",
     "# now print the results\n",
     "# print(\"\\n=====Doc=====\")\n",
