Update IF-IDF model

--- a/tf_idf.ipynb
+++ b/tf_idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def sort_coo(coo_matrix):\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def extract_topn_from_vector(feature_name_list, sorted_item_list, topn):\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "TfidfTransformer()"
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,13 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "feature_names=cv.get_feature_names()\n",
     "\n",
-    "# get the document that we want to extract keywords from\n",
-    "trump1_content = read_csv_column('./trump/trump_9.csv', '微博正文')"
+    "# get the document that we want to extract keywords from"
    ],
    "metadata": {
     "collapsed": false,
@@ -138,38 +137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Keywords\n",
-      "美国 0.464\n",
-      "中国 0.257\n",
-      "政府 0.179\n",
-      "总统 0.169\n",
-      "9月 0.157\n",
-      "拜登 0.147\n",
-      "tiktok 0.125\n",
-      "疫苗 0.106\n",
-      "大选 0.104\n",
-      "新冠 0.102\n",
-      "报道 0.101\n",
-      "疫情 0.101\n",
-      "关税 0.095\n",
-      "视频 0.094\n",
-      "美元 0.093\n",
-      "新闻 0.089\n",
-      "死亡 0.082\n",
-      "时间 0.08\n",
-      "记者 0.08\n",
-      "国家 0.078\n"
+      "10月\n",
+      "新冠 0.374\n",
+      "美国 0.286\n",
+      "确诊 0.247\n",
+      "总统 0.203\n",
+      "夫妇 0.201\n",
+      "拜登 0.171\n",
+      "检测 0.156\n",
+      "病毒 0.147\n",
+      "感染 0.136\n",
+      "白宫 0.133\n",
+      "接受 0.123\n",
+      "阳性 0.123\n",
+      "大选 0.122\n",
+      "辩论 0.119\n",
+      "症状 0.118\n",
+      "竞选 0.117\n",
+      "治疗 0.114\n",
+      "10月 0.109\n",
+      "夫人 0.102\n",
+      "中国 0.099\n"
      ]
     }
    ],
    "source": [
+    "trump1_content = read_csv_column('./trump/trump_10.csv', '微博正文')\n",
+    "\n",
     "item = ''\n",
     "for i in range(len(trump1_content)):\n",
     "    item = item + trump1_content[i]\n",
@@ -186,7 +187,7 @@
     "# now print the results\n",
     "# print(\"\\n=====Doc=====\")\n",
     "# print(period_contents)\n",
-    "print(\"\\nKeywords\")\n",
+    "print(\"\\n10月\")\n",
     "for k in keywords:\n",
     "    print(k, keywords[k])"
    ],
