--- a/idf_lda.ipynb
+++ b/idf_lda.ipynb
@@ -436,7 +436,7 @@
     "\n",
     "for i in range(10):\n",
     "    index = str(i + 1)\n",
-    "    trump_content = read_csv_with_weight('./trump/trump_' + index + '.csv')\n",
+    "    trump_content = read_csv_with_weight('./dataset/trump/trump_' + index + '.csv')\n",
     "\n",
     "    dictionary = Dictionary(trump_content)\n",
     "    dictionary.filter_extremes(no_below=5, no_above=0.85, keep_n=15000)\n",
