--- a/test.ipynb
+++ b/test.ipynb
@@ -65,7 +65,7 @@
    "execution_count": 41,
    "outputs": [],
    "source": [
-    "trump_content = read_csv_with_weight('./trump/trump01.csv')"
+    "trump_content = read_csv_with_weight('./dataset/trump/trump01.csv')"
    ],
    "metadata": {
     "collapsed": false,
