--- a/word_percentage.ipynb
+++ b/word_percentage.ipynb
@@ -46,8 +46,8 @@
     }
    ],
    "source": [
-    "contents1 = read_csv_column('./trump/trump_dataset.csv', '微博正文')\n",
-    "contents2 = read_csv_with_weight('./trump/trump_dataset.csv')\n",
+    "contents1 = read_csv_column('./dataset/trump/trump_dataset.csv', '微博正文')\n",
+    "contents2 = read_csv_with_weight('./dataset/trump/trump_dataset.csv')\n",
     "\n",
     "contents_length1 = len(contents1)\n",
     "contents_length2 = len(contents2)\n",
