Change directory and add media words to remove

--- a/preprocess/csv_split.ipynb
+++ b/preprocess/csv_split.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -44,10 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "df = pd.read_csv('trump/preprocessed_v3.csv')\n",
+    "df = pd.read_csv('../dataset/trump/preprocessed_v3.csv')\n",
     "cols = df.columns"
    ],
    "metadata": {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
@@ -89,7 +89,7 @@
     "    month.append(time)\n",
     "\n",
     "df['发布月份'] = month\n",
-    "df.to_csv('trump/preprocessed_v3.csv')"
+    "df.to_csv('../dataset/trump/preprocessed_v3.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -112,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "for i in set(df.发布月份): # for classified by months files\n",
-    "    filename = \"trump/trump\"+i+\".csv\"\n",
+    "    filename = \"../dataset/trump/trump\"+i+\".csv\"\n",
     "    df.loc[df.发布月份 == i].to_csv(filename, index=False, columns=cols)"
    ],
    "metadata": {
