--- a/preprocess/data_preprocess.ipynb
+++ b/preprocess/data_preprocess.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "import pkuseg\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def read_csv(file_path):\n",
@@ -60,11 +60,14 @@
     "    return clean_word\n",
     "\n",
     "def sentence_preprocess(item):\n",
-    "    medias = read_txt('media.txt')\n",
+    "    medias = read_txt('../dataset/media.txt')\n",
     "    content = re.compile('L[\\u4e00-\\u9fa5a-zA-Z0-9]*的[\\u4e00-\\u9fa5]*视.')\n",
     "    item = content.sub('', item)\n",
     "    content = re.compile('（凤凰卫视[\\u4e00-\\u9fa5a-zA-Z0-9]*报道）')\n",
     "    item = content.sub('', item)\n",
+    "    content = re.compile('看凤凰专题[\\u4e00-\\u9fa5a-zA-Z0-9]*')\n",
+    "    item = content.sub('', item)\n",
+    "\n",
     "    for i in medias:\n",
     "        item = item.replace(i, \"\")\n",
     "    return item"
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "lexicon = ['特朗普', '微博']\n",
@@ -117,10 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "df = pd.read_csv('trump/trump_dataset.csv')\n",
+    "df = pd.read_csv('../dataset/trump/trump_dataset.csv')\n",
     "doc_list = df['微博正文'].astype(str)"
    ],
    "metadata": {
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "rst = []\n",
@@ -163,7 +166,7 @@
     "            new_words.append(new_word)\n",
     "    result.append(new_words)\n",
     "\n",
-    "stop_words_list = read_txt('trump/stop_words.txt')\n",
+    "stop_words_list = read_txt('../dataset/stop_words.txt')\n",
     "\n",
     "result1 = []\n",
     "for words in result:\n",
@@ -196,12 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "del df['微博正文']\n",
     "df['微博正文'] = result1\n",
-    "df.to_csv('trump/preprocessed_v3.csv')"
+    "df.to_csv('../dataset/trump/preprocessed_v3.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -225,9 +228,9 @@
   {
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv('trump/preprocessed_v3.csv')\n",
+    "df = pd.read_csv('../dataset/trump/preprocessed_v3.csv')\n",
     "df = df[pd.notnull(df['微博正文'])]\n",
-    "df.to_csv('trump/preprocessed_v3.csv')"
+    "df.to_csv('../dataset/trump/preprocessed_v3.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -235,7 +238,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": []
   }
  ],
