Update tf-idf baseline result

--- a/baselines/tf_idf.ipynb
+++ b/baselines/tf_idf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,33 +12,24 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "def read_csv_column(csv_path, column_name):\n",
-    "    df = pd.read_csv(csv_path, encoding='utf-8', low_memory=False)\n",
-    "    return df[column_name].tolist()"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "def read_csv_column(csv_path, column_name):\n",
+    "    df = pd.read_csv(csv_path, encoding='utf-8', low_memory=False)\n",
+    "    return df[column_name].tolist()\n",
+    "\n",
     "def sort_coo(coo_matrix):\n",
     "    tuples = zip(coo_matrix.col, coo_matrix.data)\n",
-    "    return sorted(tuples, key=lambda x: (x[1], x[0]), reverse=True)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
+    "    return sorted(tuples, key=lambda x: (x[1], x[0]), reverse=True)\n",
+    "\n",
     "def extract_topn_from_vector(feature_name_list, sorted_item_list, topn):\n",
     "    \"\"\"\n",
     "    get the feature names and tf-idf score of top n items\n",
@@ -64,26 +55,18 @@
     "        results[feature_vals[idx]]=score_vals[idx]\n",
     "\n",
     "    return results"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "\n",
     "# get the weibo contents\n",
-    "weibo_contents = read_csv_column('./trump/preprocessed_v2.csv', '微博正文')\n",
+    "weibo_contents = read_csv_column('../dataset/trump/preprocessed_v3.csv', '微博正文')\n",
     "\n",
-    "# ignore words that appear in 85% of documents\n",
-    "cv=CountVectorizer(max_df=0.85, max_features=10000)\n",
+    "# ignore words that appear in 75% of documents\n",
+    "cv=CountVectorizer(max_df=0.75, max_features=10000)\n",
     "word_count_vector=cv.fit_transform(weibo_contents)"
    ],
    "metadata": {
@@ -95,22 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "TfidfTransformer()"
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 8,
+   "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "\n",
-    "tfidf_transformer=TfidfTransformer(smooth_idf=True,use_idf=True)\n",
-    "tfidf_transformer.fit(word_count_vector)"
+    "tfidf_transformer=TfidfTransformer(smooth_idf=True, use_idf=True)\n",
+    "tfidf_transformer.fit(word_count_vector)\n",
+    "feature_names=cv.get_feature_names()"
    ],
    "metadata": {
     "collapsed": false,
@@ -121,75 +94,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "feature_names=cv.get_feature_names()\n",
-    "\n",
-    "# get the document that we want to extract keywords from"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% computing TF-IDF and extracting keywords\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\n",
-      "10月\n",
-      "新冠 0.374\n",
-      "美国 0.286\n",
-      "确诊 0.247\n",
-      "总统 0.203\n",
-      "夫妇 0.201\n",
-      "拜登 0.171\n",
-      "检测 0.156\n",
-      "病毒 0.147\n",
-      "感染 0.136\n",
+      "01月\n",
+      "伊朗 0.564\n",
+      "美国 0.308\n",
+      "伊拉克 0.174\n",
+      "中东 0.158\n",
+      "协议 0.141\n",
+      "弹劾 0.136\n",
+      "中国 0.135\n",
+      "总统 0.133\n",
+      "袭击 0.131\n",
+      "美军 0.124\n",
+      "苏莱曼尼 0.122\n",
+      "1月 0.116\n",
+      "北约 0.084\n",
+      "达沃斯 0.084\n",
+      "世界 0.081\n",
+      "参议院 0.079\n",
+      "战争 0.076\n",
+      "国家 0.074\n",
+      "经济 0.071\n",
+      "时间 0.069\n",
+      "02月\n",
+      "美国 0.423\n",
+      "印度 0.271\n",
+      "中国 0.243\n",
+      "总统 0.193\n",
+      "2月 0.146\n",
+      "疫情 0.131\n",
+      "佩洛西 0.124\n",
+      "华为 0.116\n",
+      "国家 0.116\n",
+      "发动机 0.116\n",
+      "政府 0.115\n",
+      "弹劾 0.109\n",
+      "咨文 0.105\n",
+      "国情 0.103\n",
+      "美元 0.103\n",
+      "病毒 0.096\n",
+      "国会 0.078\n",
+      "寄生虫 0.078\n",
+      "弹劾案 0.078\n",
+      "贸易 0.077\n",
+      "03月\n",
+      "美国 0.382\n",
+      "病毒 0.294\n",
+      "疫情 0.274\n",
+      "中国 0.233\n",
+      "新冠 0.218\n",
+      "总统 0.156\n",
+      "肺炎 0.152\n",
+      "确诊 0.135\n",
+      "经济 0.133\n",
+      "3月 0.123\n",
+      "物资 0.12\n",
+      "死亡 0.11\n",
+      "检测 0.108\n",
+      "病例 0.101\n",
+      "时间 0.098\n",
+      "纽约 0.092\n",
+      "熔断 0.092\n",
+      "国家 0.091\n",
+      "美股 0.089\n",
+      "人数 0.085\n",
+      "04月\n",
+      "美国 0.465\n",
+      "疫情 0.267\n",
+      "中国 0.207\n",
+      "世卫 0.183\n",
+      "新冠 0.173\n",
+      "组织 0.17\n",
+      "病毒 0.162\n",
+      "4月 0.136\n",
+      "总统 0.132\n",
+      "政府 0.124\n",
+      "肺炎 0.118\n",
+      "口罩 0.116\n",
+      "死亡 0.112\n",
+      "国家 0.105\n",
+      "经济 0.1\n",
+      "病例 0.098\n",
+      "确诊 0.092\n",
+      "世界 0.092\n",
+      "白宫 0.088\n",
+      "记者 0.088\n",
+      "05月\n",
+      "美国 0.463\n",
+      "中国 0.296\n",
+      "新冠 0.188\n",
+      "病毒 0.186\n",
+      "疫情 0.184\n",
+      "疫苗 0.156\n",
+      "总统 0.139\n",
       "白宫 0.133\n",
-      "接受 0.123\n",
-      "阳性 0.123\n",
-      "大选 0.122\n",
-      "辩论 0.119\n",
-      "症状 0.118\n",
-      "竞选 0.117\n",
-      "治疗 0.114\n",
-      "10月 0.109\n",
+      "5月 0.13\n",
+      "政府 0.13\n",
+      "组织 0.124\n",
+      "死亡 0.113\n",
+      "研发 0.111\n",
+      "1月 0.109\n",
+      "世卫 0.096\n",
+      "口罩 0.094\n",
+      "11日 0.088\n",
+      "世界 0.084\n",
+      "奥巴马 0.084\n",
+      "时间 0.083\n",
+      "06月\n",
+      "美国 0.476\n",
+      "总统 0.203\n",
+      "中国 0.182\n",
+      "6月 0.157\n",
+      "警察 0.131\n",
+      "政府 0.13\n",
+      "竞选 0.128\n",
+      "白宫 0.125\n",
+      "疫情 0.12\n",
+      "博尔顿 0.119\n",
+      "集会 0.114\n",
+      "抗议 0.107\n",
+      "病毒 0.101\n",
+      "伊朗 0.1\n",
+      "新冠 0.098\n",
+      "国家 0.096\n",
+      "报道 0.091\n",
+      "黑人 0.09\n",
+      "美军 0.087\n",
+      "国际 0.086\n",
+      "07月\n",
+      "美国 0.456\n",
+      "口罩 0.234\n",
+      "中国 0.205\n",
+      "疫情 0.193\n",
+      "新冠 0.178\n",
+      "总统 0.178\n",
+      "政府 0.163\n",
+      "7月 0.16\n",
+      "病毒 0.135\n",
+      "国家 0.112\n",
+      "大选 0.108\n",
+      "白宫 0.097\n",
+      "首次 0.096\n",
+      "时间 0.092\n",
+      "推迟 0.092\n",
+      "病例 0.09\n",
+      "福奇 0.086\n",
+      "报道 0.08\n",
+      "新闻 0.076\n",
+      "拜登 0.075\n",
+      "08月\n",
+      "美国 0.406\n",
+      "tiktok 0.317\n",
+      "微信 0.267\n",
+      "交易 0.187\n",
+      "中国 0.186\n",
+      "腾讯 0.162\n",
+      "禁止 0.155\n",
+      "公司 0.141\n",
+      "企业 0.14\n",
+      "总统 0.125\n",
+      "跳动 0.122\n",
+      "字节 0.122\n",
+      "8月 0.121\n",
+      "45 0.117\n",
+      "回应 0.113\n",
+      "政府 0.11\n",
+      "天后 0.109\n",
+      "国家 0.099\n",
+      "拜登 0.098\n",
+      "行政 0.093\n",
+      "09月\n",
+      "美国 0.468\n",
+      "中国 0.259\n",
+      "政府 0.18\n",
+      "总统 0.17\n",
+      "9月 0.159\n",
+      "拜登 0.148\n",
+      "tiktok 0.126\n",
+      "疫苗 0.107\n",
+      "大选 0.105\n",
+      "新冠 0.103\n",
+      "报道 0.102\n",
+      "疫情 0.102\n",
+      "关税 0.096\n",
+      "美元 0.094\n",
+      "死亡 0.083\n",
+      "时间 0.08\n",
+      "记者 0.08\n",
+      "国家 0.079\n",
+      "除恶 0.078\n",
+      "扫黑 0.077\n",
+      "10月\n",
+      "新冠 0.376\n",
+      "美国 0.287\n",
+      "确诊 0.248\n",
+      "总统 0.204\n",
+      "夫妇 0.202\n",
+      "拜登 0.173\n",
+      "检测 0.157\n",
+      "病毒 0.148\n",
+      "感染 0.137\n",
+      "白宫 0.134\n",
+      "接受 0.124\n",
+      "阳性 0.124\n",
+      "大选 0.123\n",
+      "辩论 0.12\n",
+      "症状 0.119\n",
+      "竞选 0.118\n",
+      "治疗 0.115\n",
+      "10月 0.11\n",
       "夫人 0.102\n",
       "中国 0.099\n"
      ]
     }
    ],
    "source": [
-    "trump1_content = read_csv_column('./trump/trump_10.csv', '微博正文')\n",
-    "\n",
-    "item = ''\n",
-    "for i in range(len(trump1_content)):\n",
-    "    item = item + trump1_content[i]\n",
-    "# item = trump1_content[1]\n",
-    "# generate tf-idf for the given document\n",
-    "tf_idf_vector = tfidf_transformer.transform(cv.transform([item]))\n",
-    "\n",
-    "# sort the tf-idf vectors by descending order of scores\n",
-    "sorted_items = sort_coo(tf_idf_vector.tocoo())\n",
-    "\n",
-    "# extract only the top n; n here is 10\n",
-    "keywords = extract_topn_from_vector(feature_names, sorted_items, 20)\n",
-    "\n",
-    "# now print the results\n",
-    "# print(\"\\n=====Doc=====\")\n",
-    "# print(period_contents)\n",
-    "print(\"\\n10月\")\n",
-    "for k in keywords:\n",
-    "    print(k, keywords[k])"
+    "for i in range(10):\n",
+    "    if i < 9:\n",
+    "        index = '0' + str(i + 1)\n",
+    "    else:\n",
+    "        index = str(i + 1)\n",
+    "    # get the document that we want to extract keywords from\n",
+    "    trump_content = read_csv_column('../dataset/trump/trump' + index + '.csv', '微博正文')\n",
+    "    item = ''\n",
+    "    for i in range(len(trump_content)):\n",
+    "        item = item + trump_content[i]\n",
+    "    # generate tf-idf for the given document\n",
+    "    tf_idf_vector = tfidf_transformer.transform(cv.transform([item]))\n",
+    "    # sort the tf-idf vectors by descending order of scores\n",
+    "    sorted_items = sort_coo(tf_idf_vector.tocoo())\n",
+    "    # extract only the top n; n here is 20\n",
+    "    keywords = extract_topn_from_vector(feature_names, sorted_items, 20)\n",
+    "    # now print the results\n",
+    "    print(index + '月')\n",
+    "    for k in keywords:\n",
+    "        print(k, keywords[k])"
    ],
    "metadata": {
     "collapsed": false,
@@ -201,9 +345,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python388jvsc74a57bd0a38b35b77e6756a055eaa8a5c714418c79b2c1847796cd1ba287d8719b86b0a5",
+   "display_name": "Python 3.8.8 64-bit ('nlp': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
